manifests/vikunja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja
  labels:
    app: vikunja
spec:
  selector:
    app: vikunja
  ports:
    - port: 3456
      targetPort: 3456
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: vikunja-postgres
  namespace: vikunja
  labels:
    app: vikunja-postgres
spec:
  selector:
    app: vikunja-postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
