manifests/vikunja/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
  namespace: vikunja
  annotations:
    tailscale.com/funnel: "false"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Vikunja
    gethomepage.dev/description: Project and task management
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: vikunja.png
    gethomepage.dev/href: https://vikunja.lungfish-ide.ts.net
    gethomepage.dev/app: vikunja
    gethomepage.dev/pod-selector: app=vikunja
spec:
  ingressClassName: tailscale
  rules:
    - host: vikunja
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja
                port:
                  number: 3456
  tls:
    - hosts:
        - vikunja
